# Virtual-Drawing-using-Machine-Learning

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: settings.py
core/: drawing_tools.py  hand_detector.py
utils/: ui_helpers.py
