[project]
name = "virtual-drawing"
version = "0.1.0"
description = ""
authors = [
    {name = "SUSHRUTH3002",email = "sushruthmsetty29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
